package cl.ucn.disc.pa.repasoPrueba2Pasada.dominio;

public interface Figura {

    double calcularArea();
    double calcularPerimetro();

}
