package cl.ucn.disc.pa.repasoPrueba2Pasada.servicios;

public interface SistemaGeometria {
}
